--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "gym_envs_urdf"]
 	path = gym_envs_urdf
 	url = https://github.com/maxspahn/gym_envs_urdf
+[submodule "motion_planing_scenes"]
+	path = motion_planing_scenes
+	url = git@github.com:maxspahn/motion_planning_scenes.git
