barely working mpc controller

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ pynput = {version = "^1.7.6"}
 multiprocess = {version = "^0.70.12"}
 urdfpy = {git = "https://git@github.com/maxspahn/urdfpy.git", rev = "fix-networkx-dependency"}
 urdfenvs = {git = "https://github.com/maxspahn/gym_envs_urdf.git"}
+do-mpc = "^4.3.2"
 
 [tool.poetry.extras]
 
