--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Robot learning the environment by interaction."
 authors = ["Gijs Groote <gijsgroote@hotmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.6, <3.11" 
+python = ">=3.8,<3.11"
 pybullet = "^3.2.1"
 gym = "^0.21.0"
 numpy = "^1.10.0"
@@ -18,6 +18,9 @@ urdfenvs = {git = "https://github.com/maxspahn/gym_envs_urdf.git"}
 do-mpc = "^4.3.2"
 pyvis = "^0.1.9"
 mpld3 = "^0.5.7"
+dash = "^2.3.0"
+plotly = "^5.6.0"
+pandas = "^1.4.1"
 
 [tool.poetry.extras]
 
