--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ plotly = "^5.6.0"
 pandas = "^1.4.1"
 pyorbital = "^1.7.1"
 pyarrow = "^7.0.0"
+dash-dangerously-set-inner-html = "^0.0.2"
 
 [tool.poetry.extras]
 
