--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ pandas = "^1.4.1"
 pyorbital = "^1.7.1"
 pyarrow = "^7.0.0"
 dash-dangerously-set-inner-html = "^0.0.2"
+beautifulsoup4 = "^4.10.0"
 
 [tool.poetry.extras]
 
