--- a/.pylintrc
+++ b/.pylintrc
@@ -3,5 +3,11 @@ disable=
   missing-function-docstring,
   missing-module-docstring
 
+# set python path
+init-hook="from pylint.config import find_pylintrc; import os, sys; sys.path.append(os.path.dirname(find_pylintrc()))"
+
 [DESIGN]
 max-attributes=10
+
+[FORMAT]
+good-names=i,j,k,x,y,to,v,u1,u2,u,TODO,iden,dt,ob
