--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,18 +1,17 @@
 [tool.poetry]
 name = "robot_brain"
-version = "0.1.0"
+version = "0.1.1"
 description = "Robot learning the environment by interaction."
 authors = ["Gijs Groote <gijsgroote@hotmail.com>"]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<3.10"
+python = "^3.10"
 urdfpy = {git = "https://git@github.com/maxspahn/urdfpy.git", rev = "fix-networkx-dependency"}
 motion-planning-scenes = {path = "../motion_planning_scenes"}
 urdfenvs = {path = "../gym_envs_urdf"}
 pybullet = "^3.2.1"
 gym = "^0.21.0"
 numpy = "^1.10.0"
-casadi = "^3.5.5"
 multiprocess = {version = "^0.70.12"}
 do-mpc = "^4.3.2"
 pyvis = "^0.1.9"
