--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ authors = ["Gijs Groote <gijsgroote@hotmail.com>"]
 python = ">=3.10, <3.12"
 # use urdfpy unpinned version, see https://github.com/mmatl/urdfpy/pull/26
 urdfpy = {git="https://github.com/GijsGroote/urdfpy.git", rev="master"}
-motion-planning-scenes = {git="https://github.com/GijsGroote/motion_planning_scenes.git", rev="develop"}
+# motion-planning-scenes = {git="https://github.com/GijsGroote/motion_planning_scenes.git", rev="develop"}
+motion-planning-scenes = {path="../motion_planning_scenes"}
+
 urdfenvs = {git="https://github.com/GijsGroote/gym_envs_urdf.git", rev="develop"}
 pybullet = "^3.2.1"
 gym = "^0.21.0"
