--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ gym = "^0.21.0"
 numpy = "^1.10.0"
 multiprocess = "^0.70.12"
 do-mpc = "^4.3.2"
+pytorch_mppi = {git="git@github.com:UM-ARM-Lab/pytorch_mppi.git", rev="master"}
 pyvis = "^0.1.9"
 mpld3 = "^0.5.7"
 dash = "^2.3.0"
@@ -28,6 +29,7 @@ pynput = "^1.7.6"
 dash-dangerously-set-inner-html = "^0.0.2"
 beautifulsoup4 = "^4.10.0"
 torch = "^1.12.1"
+
 
 [tool.poetry.extras]
 
