--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ pynput = "^1.7.6"
 dash-dangerously-set-inner-html = "^0.0.2"
 beautifulsoup4 = "^4.10.0"
 torch = "^1.12.1"
+pygments = "^2.13.0"
 
 
 [tool.poetry.extras]
