--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dash-dangerously-set-inner-html = "^0.0.2"
 beautifulsoup4 = "^4.10.0"
 torch = "^1.12.1"
 pygments = "^2.13.0"
+sortedcontainers = "^2.4.0"
 
 
 [tool.poetry.extras]
