--- a/.pylintrc
+++ b/.pylintrc
@@ -15,3 +15,8 @@ max-attributes=10
 [FORMAT]
 good-names=n,i,j,k,x,y,to,v,u1,u2,u,TODO,iden,dt,df,ob,_A,_B,_C,_D,W,H,a,b,c,d,e
 max-line-length=130
+
+[TYPECHECK]
+# List of members which are set dynamically and missed by Pylint inference
+# system, and so shouldn't trigger E1101 when accessed.
+generated-members=numpy.*, torch.*
