created all kinds of stuff

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ urdfpy = {git="https://github.com/GijsGroote/urdfpy.git", rev="master"}
 # motion-planning-scenes = {git="https://github.com/GijsGroote/motion_planning_scenes.git", rev="develop"}
 motion-planning-scenes = {path="../motion_planning_scenes"}
 # urdfenvs = {git="https://github.com/GijsGroote/gym_envs_urdf.git", rev="develop"}
-urdfenvs = {path="../gym_envs_urdf"}
+urdfenvs = {path="../gym_envs_urdf", develop=true}
 pybullet = "^3.2.1"
 gym = "^0.21.0"
 numpy = ">=1.10.0, <1.24.0"
